[VD-98] permanent URls for images, buckets are dynamically creating, off tests for some time
